tests/NormalTests/paczka1/small_fuzzy/56559603.err
Error in line 2: mCvituwsm A923 87,6
Error in line 6: KyS A531 13,06
Error in line 4: mCvituwsm A531 61,0
Error in line 11: KyS A531 55,1
